# it-admin-s

./: .gitignore  DOCKER_GUIDE.md  ROADMAP.md  TODO.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  seed_data.sql
backend/migrations/2025-10-10-184400-0000_create_initial_tables/: down.sql  up.sql
backend/migrations/2025-10-10-184400-0001_create_triggers/: down.sql  up.sql
backend/migrations/2025-10-10-184400-0002_create_views/: down.sql  up.sql
backend/migrations/2025-10-11-191848-0000_add_terminated_status/: down.sql  up.sql
backend/migrations/2025-10-12-172948-0000_add_departmets_count_optimisation/: down.sql  up.sql
backend/migrations/2025-10-16-124659-0000_add_computer_online_status/: down.sql  up.sql
backend/migrations/2025-10-16-124718-0000_add_request_history/: down.sql  up.sql
backend/migrations/2025-10-16-124721-0000_add_notes_system/: down.sql  up.sql
backend/migrations/2025-10-16-124723-0000_add_knowledge_base/: down.sql  up.sql
backend/migrations/2025-10-16-124725-0000_add_network_management/: down.sql  up.sql
backend/migrations/2025-10-16-124727-0000_add_remote_access/: down.sql  up.sql
backend/migrations/2025-10-16-124729-0000_add_backup_tracking/: down.sql  up.sql
backend/migrations/2025-10-16-124731-0000_add_maintenance_schedules/: down.sql  up.sql
backend/migrations/2025-10-16-124733-0000_add_contracts_vendors/: down.sql  up.sql
backend/migrations/2025-10-16-124735-0000_add_license_pool/: down.sql  up.sql
backend/src/: main.rs
backend/src/config/: mod.rs  (+1 more)
(+167 files in other folders)
